--- a/src/app/thank-you/thank-you-details/thank-you-details.component.css
+++ b/src/app/thank-you/thank-you-details/thank-you-details.component.css
@@ -1,3 +1,12 @@
+.thank-you-light
+{
+    color: black;
+}
+.thank-you-dark
+{
+    color: white;
+}
+
 .print
 {
     margin: 7px;
